# celerity-bench

./: .gitignore  CMakeLists.txt  README.md
include/: benchmark_traits.h  command_line.h  common.h  prefetched_buffer.h  time_metrics.h
micro/: DRAM.cc  L2.cc  README.md  arith.cc  buffers.cc  multiple_buffers.cc  range_mappers.cc  sequential_range_mappers.cc  sf.cc
polybench/: CMakeLists.txt
polybench/2DConvolution/Celerity/: 2DConvolution.cpp
polybench/2mm/Celerity/: 2mm.cpp
polybench/3DConvolution/Celerity/: 3DConvolution.cpp
polybench/3mm/Celerity/: 3mm.cpp
polybench/atax/Celerity/: atax.cpp
polybench/bicg/Celerity/: bicg.cpp
polybench/common/: polybenchUtilFuncts.h
polybench/correlation/Celerity/: correlation.cpp
polybench/covariance/Celerity/: covariance.cpp
polybench/fdtd2d/Celerity/: fdtd2d.cpp
polybench/gemm/Celerity/: gemm.cpp
polybench/gesummv/Celerity/: gesummv.cpp
polybench/gramschmidt/Celerity/: gramschmidt.cpp
polybench/linear-algebra/: 2DConvolution.cc  2mm.cc  3DConvolution.cc  3mm.cc  atax.cc  bicg.cc  correlation.cc  covariance.cc  fdtd2d.cc  gemm.cc  gesummv.cc  gramschmidt.cc  mvt.cc  syr2k.cc  syrk.cc
polybench/mvt/Celerity/: mvt.cpp
polybench/stencils/: adi.cc  fdtd_apml.cpp  jacobi_1d.cc  jacobi_2d.cc  jacobi_2d.cpp  seidel_2d.cc  seidel_2d.cpp
polybench/syr2k/Celerity/: syr2k.cpp
polybench/syrk/Celerity/: syrk.cpp
runtime/: matmulchain.cc
single-kernel/: README.md  matmul.cc  median.cc  mol_dyn.cc  scalar_prod.cc  sobel.cc  sobel5.cc  sobel7.cc  vec_add.cc  vec_add.cpp
